# agentskills

./: .env.template  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: agentskills-intro.md  cli-go-port-briefing.md  course-design-research.md  embeddable-components-research.md  installation.md
docs/examples/: mermaid-showcase.json
scripts/: codesign.sh  install.sh
skills/adr-writer/: SKILL.md
skills/env-inspector/: SKILL.md
skills/env-inspector/hooks/: path-gate.sh
skills/env-inspector/scripts/: env-safe-read.sh
skills/interactive-learner/: SKILL.md
skills/interactive-learner/assets/: components.css  dashboard-shell.html  shell.html
skills/interactive-learner/references/: component-catalog.md  course-design-guide.md  deep-research-gamification-spaced-repetition.md  (+4 more)
skills/jwa-harden/: SKILL.md
skills/jwa-tobrew/: SKILL.md
skills/mac-cleanup/: SKILL.md
skills/personal-commit-review/: SKILL.md
skills/release/: SKILL.md
skills/scaffold-cli/: SKILL.md
skills/spec/: SKILL.md
skills/stackpicker/: SKILL.md
skills/tap-alignment/: SKILL.md
skills/tap-scaffolding/: SKILL.md
skills/vps-dependency-overview/: SKILL.md
skills/vps-service-status/: SKILL.md
src/agentskills/: __init__.py  bootstrap.py  cli.py  harness_adapters.json  link.py  list.py  package.py  release.py
tests/: conftest.py  test_bootstrap.py  test_link.py  test_list.py  test_package.py
tools/agentskills/: README.md  main.go  main_test.go
(+26 files in other folders)
