[project]
name = "agentskills"
version = "0.1.0"
description = "Personal collection of agent skills by jwa91."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.scripts]
agentskills = "agentskills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentskills"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
