[project]
name = "agentskills"
version = "0.1.0"
description = "Personal collection of agent skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentskills = "agentskills.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentskills"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --import-mode=importlib"
